--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chart.js": "^4.5.1",
     "next": "16.1.6",
+    "next-auth": "^5.0.0-beta.30",
     "next-pwa": "^5.6.0",
     "react": "19.2.3",
     "react-chartjs-2": "^5.3.1",
